css/board.css
/* ... */
.assigned-inputfield-box-edit-div {
    width: 100%;
    position: relative;
}

.assigned-to-edit-headline {
    font-size: 20px;
    margin-top: 30px;
    margin-bottom: 5px;
    color: #42526E;
    font-weight: 400;
}

.inputfield-text-assign-edit {
    border-radius: 5px;
    border-width: 0.5px;
    border-color: #42526e70;
    width: 100%;
    height: 35px;
    font-weight: 500;
    cursor: pointer;
    padding-left: 10px;
}

.inputfield-text-assign-edit:focus {
    outline: none;
}

.todo-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.inprogress-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.await-feedback-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.done-box {
    width: 98%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.subtask-headline-edit-div {
    width: 100%;
    position: relative;
}

.subtasks-headline-edited {
    font-size: 20px;
    margin-top: 35px;
    margin-bottom: 5px;
    color: #42526E;
    font-weight: 400;
}

.inputfield-subtask-edit-div {
    border-radius: 5px;
    border-width: 0.5px;
    border-color: #42526e70;
    width: 100%;
    height: 35px;
    font-weight: 500;
    cursor: pointer;
}

.inputfield-subtask-edit-div:focus {
    outline: none;
}

.height-zero {
    height: 0px;
}

.assigned-inputfield-edit-div {
    position: relative;
    display: flex;
    align-items: center;
}

.assigned-arrow-icon-edit {
    position: absolute;
    right: 17px;
    top: 5px;
    cursor: pointer;
}

.contacts-dropdown-edit {
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    border-bottom: 0.5px;
    border-right: 0.5px;
    height: 200px;
    max-height: 200px;
    width: 100%;
    box-shadow: 2px 2px 8px #42526e70;
    overflow-y: auto;
    position: absolute;
    background-color: white;
    z-index: 1;
}

.contact-option-edit {
    display: flex;
    align-items: center;
    margin-top: 10px;
    border-radius: 5px;
}

.contact-option-edit:hover {
    background-color: #f0f0f0;
    border-radius: 5px;
}

.contact-in-edit-template {
    display: flex;
}

.single-circle-first-edit {
    width: 32px;
    height: 32px;
    gap: 10px;
    border-radius: 45px;
    font-family: Inter;
    font-weight: 400;
    font-size: 12px;
    line-height: 120%;
    letter-spacing: 0%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(98, 214, 156);
    color: white;
    border-color: white;
    border-width: 1px;
}


.single-circle-second-edit {
    width: 32px;
    height: 32px;
    gap: 10px;
    border-radius: 45px;
    font-family: Inter;
    font-weight: 400;
    font-size: 12px;
    line-height: 120%;
    letter-spacing: 0%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: blueviolet;
    color: white;
    border-color: white;
    border-width: 1px;
    margin-left: 5px;
}

.single-circle-third-edit {
    width: 32px;
    height: 32px;
    gap: 10px;
    border-radius: 45px;
    font-family: Inter;
    font-weight: 400;
    font-size: 12px;
    line-height: 120%;
    letter-spacing: 0%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(65, 77, 248);
    color: white;
    margin-left: 5px;
}

.three-circle-container {
    display: flex;
    width: 100%;
}

.three-circle-container-edit {
    display: flex;
    width: 100%;
    position: absolute;
    top: 66px;
}

.circles-edit {
    width: 32px;
    height: 28px;
    gap: 10px;
    border-radius: 45px;
    font-family: Inter;
    font-weight: 400;
    font-size: 12px;
    line-height: 120%;
    letter-spacing: 0%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(98, 214, 156);
    color: white;
    border-color: white;
    border-width: 1px;
    margin-left: 15px;
}

.contact-name-edit {
    margin-left: 10px;
    font-size: 18px;
}

.name-checkbox-flexbox {
    display: flex;
    justify-content: space-between;
    width: 100%;
    cursor: pointer;
    min-height: 40px;
    align-items: center;
}


.contact-checkbox-edit {
    margin-right: 15px;
    cursor: pointer;
}

.subtask-inputfield-icon-edit-div {
    display: flex;
    align-items: center;
    position: relative;
}

.seperator-subtasks-edit {
    width: 1px;
    height: 20px;
    background-color: #b4b4b4;
    margin-left: 10px;
}

.delete-subtask-edit-check-icon {
    position: absolute;
    right: 35px;
    cursor: pointer;
}

.seperator-subtasks-edit {
    position: absolute;
    right: 29px;
    cursor: pointer;
}

.add-new-subtask-edit-icon {
    position: absolute;
    right: 5px;
    cursor: pointer;
}

.input-border-left-bottom {
    border-left: 2px solid #29ABE2;
    border-bottom: 2px solid #29ABE2;
    border-top: none;
    border-right: none;
}

.subtasks-board-first-task-edit {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 5px;
    height: 30px;
    width: 100%;
}

.subtasks-board-first-task-edit:hover {
    background-color: #f0f0f0;
    border-radius: 5px;
}

.subtask-bullet-margin-right {
    margin-right: 10px;
}

.bullet-subtask-flexbox {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    margin-left: 10px;
    position: relative;
}

.seperator-for-subtasks {
    width: 1px;
    height: 20px;
    background-color: #b4b4b4;
    position: absolute;
    right: 39px;
}

.edit-pencil-icon {
    position: absolute;
    right: 42px;
    cursor: pointer;
}

.edit-pencil-icon:hover {
    border-radius: 50%;
    cursor: pointer;
    scale: 1.05;
}

.waste-icon {
    position: absolute;
    right: 14px;
    cursor: pointer;
}

.waste-icon:hover {
    border-radius: 50%;
    cursor: pointer;
    scale: 1.05;
}
/* ... */

